# family-finance-bot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __main__.py  main.py
app/api/: routes.py
app/bot/: app.py  handlers.py  keyboards.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  entities.py  enums.py
app/schemas/: finance.py
app/services/: analytics_service.py  defaults.py  family_service.py  finance_service.py  llm_service.py  notification_service.py  parser.py  reporting_service.py
app/static/: app.js  index.html  styles.css
app/utils/: formatting.py
