[project]
name = "family-finance-bot"
version = "1.0.0"
description = "Telegram bot for family finance accounting MVP"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "fastapi>=0.111,<1",
    "greenlet>=3.0,<4",
    "httpx>=0.27,<1",
    "matplotlib>=3.8,<4",
    "openai>=1.35,<2",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",
    "python-multipart>=0.0.9,<1",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1",
    "pytest>=8.2,<9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

